code/ParLatteFun.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParLatteFun.y
-----------------------------------------------------------------------------


rule 41 is unused
rule 42 is unused
rule 43 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListInit                                (4)
	Init -> Type Ident '(' ListArg ')' Block           (5)
	Init -> Type Ident '=' Expr ';'                    (6)
	ListInit -> Init                                   (7)
	ListInit -> Init ListInit                          (8)
	Arg -> Type Ident                                  (9)
	Arg -> Type 'ref' Ident                            (10)
	ListArg ->                                         (11)
	ListArg -> Arg                                     (12)
	ListArg -> Arg ',' ListArg                         (13)
	Block -> '{' ListStmt '}'                          (14)
	ListStmt ->                                        (15)
	ListStmt -> Stmt ListStmt                          (16)
	Stmt -> ';'                                        (17)
	Stmt -> Block                                      (18)
	Stmt -> Type Ident ';'                             (19)
	Stmt -> Init                                       (20)
	Stmt -> Ident '=' Expr ';'                         (21)
	Stmt -> Ident '++' ';'                             (22)
	Stmt -> Ident '--' ';'                             (23)
	Stmt -> 'return' Expr ';'                          (24)
	Stmt -> 'return' ';'                               (25)
	Stmt -> 'if' '(' Expr ')' Block                    (26)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (27)
	Stmt -> 'while' '(' Expr ')' Block                 (28)
	Stmt -> Expr ';'                                   (29)
	Type -> 'int'                                      (30)
	Type -> 'string'                                   (31)
	Type -> 'bool'                                     (32)
	Type -> 'void'                                     (33)
	Type -> '[' '(' ListTArg ')' '->' Type ']'         (34)
	Type -> 'auto'                                     (35)
	TArg -> Type                                       (36)
	TArg -> Type 'ref'                                 (37)
	ListTArg ->                                        (38)
	ListTArg -> TArg                                   (39)
	ListTArg -> TArg ',' ListTArg                      (40)
	ListType ->                                        (41)
	ListType -> Type                                   (42)
	ListType -> Type ',' ListType                      (43)
	Expr6 -> Ident                                     (44)
	Expr6 -> Integer                                   (45)
	Expr6 -> 'true'                                    (46)
	Expr6 -> 'false'                                   (47)
	Expr6 -> Ident '(' ListExpr ')'                    (48)
	Expr6 -> '(' Expr ')' '(' ListExpr ')'             (49)
	Expr6 -> String                                    (50)
	Expr6 -> '(' Expr ')'                              (51)
	Expr5 -> '-' Expr6                                 (52)
	Expr5 -> '!' Expr6                                 (53)
	Expr5 -> Expr6                                     (54)
	Expr4 -> Expr4 MulOp Expr5                         (55)
	Expr4 -> Expr5                                     (56)
	Expr3 -> Expr3 AddOp Expr4                         (57)
	Expr3 -> Expr4                                     (58)
	Expr2 -> Expr2 RelOp Expr3                         (59)
	Expr2 -> Expr3                                     (60)
	Expr1 -> Expr2 '&&' Expr1                          (61)
	Expr1 -> Expr2                                     (62)
	Expr -> Expr1 '||' Expr                            (63)
	Expr -> 'lambda' '(' ListArg ')' '->' Type '.' Expr   (64)
	Expr -> 'λ' '(' ListArg ')' '->' Type '.' Expr     (65)
	Expr -> 'lambda' '(' ListArg ')' '->' Type Block   (66)
	Expr -> 'λ' '(' ListArg ')' '->' Type Block        (67)
	Expr -> Expr1                                      (68)
	ListExpr ->                                        (69)
	ListExpr -> Expr                                   (70)
	ListExpr -> Expr ',' ListExpr                      (71)
	AddOp -> '+'                                       (72)
	AddOp -> '-'                                       (73)
	MulOp -> '*'                                       (74)
	MulOp -> '/'                                       (75)
	MulOp -> '%'                                       (76)
	RelOp -> '<'                                       (77)
	RelOp -> '<='                                      (78)
	RelOp -> '>'                                       (79)
	RelOp -> '>='                                      (80)
	RelOp -> '=='                                      (81)
	RelOp -> '!='                                      (82)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'->'           { PT _ (TS _ 13) }
	'.'            { PT _ (TS _ 14) }
	'/'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	']'            { PT _ (TS _ 24) }
	'auto'         { PT _ (TS _ 25) }
	'bool'         { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'false'        { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'int'          { PT _ (TS _ 30) }
	'lambda'       { PT _ (TS _ 31) }
	'ref'          { PT _ (TS _ 32) }
	'return'       { PT _ (TS _ 33) }
	'string'       { PT _ (TS _ 34) }
	'true'         { PT _ (TS _ 35) }
	'void'         { PT _ (TS _ 36) }
	'while'        { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'||'           { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	'λ'            { PT _ (TS _ 41) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Init            rules 5, 6
	ListInit        rules 7, 8
	Arg             rules 9, 10
	ListArg         rules 11, 12, 13
	Block           rule  14
	ListStmt        rules 15, 16
	Stmt            rules 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29
	Type            rules 30, 31, 32, 33, 34, 35
	TArg            rules 36, 37
	ListTArg        rules 38, 39, 40
	ListType        rules 41, 42, 43
	Expr6           rules 44, 45, 46, 47, 48, 49, 50, 51
	Expr5           rules 52, 53, 54
	Expr4           rules 55, 56
	Expr3           rules 57, 58
	Expr2           rules 59, 60
	Expr1           rules 61, 62
	Expr            rules 63, 64, 65, 66, 67, 68
	ListExpr        rules 69, 70, 71
	AddOp           rules 72, 73
	MulOp           rules 74, 75, 76
	RelOp           rules 77, 78, 79, 80, 81, 82

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Program        goto state 3
	Init           goto state 4
	ListInit       goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListInit -> Init .                                  (rule 7)
	ListInit -> Init . ListInit                         (rule 8)

	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	%eof           reduce using rule 7

	Init           goto state 4
	ListInit       goto state 15
	Type           goto state 6

State 5

	Program -> ListInit .                               (rule 4)

	%eof           reduce using rule 4


State 6

	Init -> Type . Ident '(' ListArg ')' Block          (rule 5)
	Init -> Type . Ident '=' Expr ';'                   (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 14

State 7

	Type -> '[' . '(' ListTArg ')' '->' Type ']'        (rule 34)

	'('            shift, and enter state 13


State 8

	Type -> 'auto' .                                    (rule 35)

	')'            reduce using rule 35
	','            reduce using rule 35
	'.'            reduce using rule 35
	']'            reduce using rule 35
	'ref'          reduce using rule 35
	'{'            reduce using rule 35
	L_Ident        reduce using rule 35


State 9

	Type -> 'bool' .                                    (rule 32)

	')'            reduce using rule 32
	','            reduce using rule 32
	'.'            reduce using rule 32
	']'            reduce using rule 32
	'ref'          reduce using rule 32
	'{'            reduce using rule 32
	L_Ident        reduce using rule 32


State 10

	Type -> 'int' .                                     (rule 30)

	')'            reduce using rule 30
	','            reduce using rule 30
	'.'            reduce using rule 30
	']'            reduce using rule 30
	'ref'          reduce using rule 30
	'{'            reduce using rule 30
	L_Ident        reduce using rule 30


State 11

	Type -> 'string' .                                  (rule 31)

	')'            reduce using rule 31
	','            reduce using rule 31
	'.'            reduce using rule 31
	']'            reduce using rule 31
	'ref'          reduce using rule 31
	'{'            reduce using rule 31
	L_Ident        reduce using rule 31


State 12

	Type -> 'void' .                                    (rule 33)

	')'            reduce using rule 33
	','            reduce using rule 33
	'.'            reduce using rule 33
	']'            reduce using rule 33
	'ref'          reduce using rule 33
	'{'            reduce using rule 33
	L_Ident        reduce using rule 33


State 13

	Type -> '[' '(' . ListTArg ')' '->' Type ']'        (rule 34)

	')'            reduce using rule 38
	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Type           goto state 18
	TArg           goto state 19
	ListTArg       goto state 20

State 14

	Init -> Type Ident . '(' ListArg ')' Block          (rule 5)
	Init -> Type Ident . '=' Expr ';'                   (rule 6)

	'('            shift, and enter state 16
	'='            shift, and enter state 17


State 15

	ListInit -> Init ListInit .                         (rule 8)

	%eof           reduce using rule 8


State 16

	Init -> Type Ident '(' . ListArg ')' Block          (rule 5)

	')'            reduce using rule 11
	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Arg            goto state 43
	ListArg        goto state 44
	Type           goto state 45

State 17

	Init -> Type Ident '=' . Expr ';'                   (rule 6)

	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'-'            shift, and enter state 36
	'false'        shift, and enter state 37
	'lambda'       shift, and enter state 38
	'true'         shift, and enter state 39
	'λ'            shift, and enter state 40
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Expr6          goto state 27
	Expr5          goto state 28
	Expr4          goto state 29
	Expr3          goto state 30
	Expr2          goto state 31
	Expr1          goto state 32
	Expr           goto state 33

State 18

	TArg -> Type .                                      (rule 36)
	TArg -> Type . 'ref'                                (rule 37)

	')'            reduce using rule 36
	','            reduce using rule 36
	'ref'          shift, and enter state 23


State 19

	ListTArg -> TArg .                                  (rule 39)
	ListTArg -> TArg . ',' ListTArg                     (rule 40)

	')'            reduce using rule 39
	','            shift, and enter state 22


State 20

	Type -> '[' '(' ListTArg . ')' '->' Type ']'        (rule 34)

	')'            shift, and enter state 21


State 21

	Type -> '[' '(' ListTArg ')' . '->' Type ']'        (rule 34)

	'->'           shift, and enter state 74


State 22

	ListTArg -> TArg ',' . ListTArg                     (rule 40)

	')'            reduce using rule 38
	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Type           goto state 18
	TArg           goto state 19
	ListTArg       goto state 73

State 23

	TArg -> Type 'ref' .                                (rule 37)

	')'            reduce using rule 37
	','            reduce using rule 37


State 24

	Expr6 -> Ident .                                    (rule 44)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 48)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	'('            shift, and enter state 72
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'||'           reduce using rule 44


State 25

	Expr6 -> Integer .                                  (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'||'           reduce using rule 45


State 26

	Expr6 -> String .                                   (rule 50)

	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'||'           reduce using rule 50


State 27

	Expr5 -> Expr6 .                                    (rule 54)

	'!='           reduce using rule 54
	'%'            reduce using rule 54
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'||'           reduce using rule 54


State 28

	Expr4 -> Expr5 .                                    (rule 56)
